sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__base_3_sample_2.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_3_sample_2
expression: "TransportDeductions::from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║  23 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║   3 │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │  89 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c1: set value 5, because of: r0c1: candidate 5"
    - "r0c5: set value 4, because of: r0c5: candidate 4"
    - "r0c6: set value 1, because of: r0c6: candidate 1"
    - "r1c3: set value 2, because of: r1c3: candidate 2"
    - "r1c8: set value 4, because of: r1c8: candidate 4"
    - "r2c6: set value 6, because of: r2c6: candidate 6"
    - "r3c1: set value 1, because of: r3c1: candidate 1"
    - "r3c2: set value 4, because of: r3c2: candidate 4"
    - "r4c1: set value 2, because of: r4c1: candidate 2"
    - "r4c3: set value 5, because of: r4c3: candidate 5"
    - "r5c6: set value 5, because of: r5c6: candidate 5"
    - "r5c7: set value 8, because of: r5c7: candidate 8"
    - "r6c0: set value 1, because of: r6c0: candidate 1"
    - "r6c7: set value 6, because of: r6c7: candidate 6"
    - "r6c8: set value 7, because of: r6c8: candidate 7"
    - "r7c5: set value 1, because of: r7c5: candidate 1"
    - "r7c7: set value 4, because of: r7c7: candidate 4"
    - "r8c0: set value 4, because of: r8c0: candidate 4"
    - "r8c2: set value 2, because of: r8c2: candidate 2"
    - "r8c4: set value 5, because of: r8c4: candidate 5"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │  4  ║  1  │     │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║     │     │     ║   3 │     │     ║
    - ║     │     │  1  ║  2  │  6  │  5  ║     │  7  │  4  ║
    - ║  89 │  89 │     ║     │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║     │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║  6  │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  5  │  1  │  4  ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║     │   3 │     ║
    - ║     │  2  │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║     │     │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │  8  │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │   3 │   3 ║     │     │     ║     │     │     ║
    - ║  1  │     │  5  ║     │  4  │  2  ║  8  │  6  │  7  ║
    - ║     │     │     ║   9 │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │  1  ║     │  4  │  5  ║
    - ║     │  8  │     ║     │ 78  │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  4  │  7  │  2  ║   6 │  5  │   6 ║     │  1  │  3  ║
    - ║     │     │     ║  89 │     │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 5
    actions:
      - position:
          row: 0
          column: 1
        setValue: 5
  - reasons:
      - position:
          row: 0
          column: 5
        candidates:
          - 4
    actions:
      - position:
          row: 0
          column: 5
        setValue: 4
  - reasons:
      - position:
          row: 0
          column: 6
        candidates:
          - 1
    actions:
      - position:
          row: 0
          column: 6
        setValue: 1
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 3
        setValue: 2
  - reasons:
      - position:
          row: 1
          column: 8
        candidates:
          - 4
    actions:
      - position:
          row: 1
          column: 8
        setValue: 4
  - reasons:
      - position:
          row: 2
          column: 6
        candidates:
          - 6
    actions:
      - position:
          row: 2
          column: 6
        setValue: 6
  - reasons:
      - position:
          row: 3
          column: 1
        candidates:
          - 1
    actions:
      - position:
          row: 3
          column: 1
        setValue: 1
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 2
        setValue: 4
  - reasons:
      - position:
          row: 4
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 4
          column: 1
        setValue: 2
  - reasons:
      - position:
          row: 4
          column: 3
        candidates:
          - 5
    actions:
      - position:
          row: 4
          column: 3
        setValue: 5
  - reasons:
      - position:
          row: 5
          column: 6
        candidates:
          - 5
    actions:
      - position:
          row: 5
          column: 6
        setValue: 5
  - reasons:
      - position:
          row: 5
          column: 7
        candidates:
          - 8
    actions:
      - position:
          row: 5
          column: 7
        setValue: 8
  - reasons:
      - position:
          row: 6
          column: 0
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 0
        setValue: 1
  - reasons:
      - position:
          row: 6
          column: 7
        candidates:
          - 6
    actions:
      - position:
          row: 6
          column: 7
        setValue: 6
  - reasons:
      - position:
          row: 6
          column: 8
        candidates:
          - 7
    actions:
      - position:
          row: 6
          column: 8
        setValue: 7
  - reasons:
      - position:
          row: 7
          column: 5
        candidates:
          - 1
    actions:
      - position:
          row: 7
          column: 5
        setValue: 1
  - reasons:
      - position:
          row: 7
          column: 7
        candidates:
          - 4
    actions:
      - position:
          row: 7
          column: 7
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 0
        candidates:
          - 4
    actions:
      - position:
          row: 8
          column: 0
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 8
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 8
          column: 4
        candidates:
          - 5
    actions:
      - position:
          row: 8
          column: 4
        setValue: 5
